; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_playloop.c_mp_process_input.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_playloop.c_mp_process_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPContext = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_process_input(%struct.MPContext* %0) #0 {
  %2 = alloca %struct.MPContext*, align 8
  %3 = alloca i32*, align 8
  store %struct.MPContext* %0, %struct.MPContext** %2, align 8
  br label %4

4:                                                ; preds = %12, %1
  %5 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %6 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32* @mp_input_read_cmd(i32 %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %4
  br label %16

12:                                               ; preds = %4
  %13 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @run_command(%struct.MPContext* %13, i32* %14, i32* null, i32* null, i32* null)
  br label %4

16:                                               ; preds = %11
  %17 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %18 = load %struct.MPContext*, %struct.MPContext** %2, align 8
  %19 = getelementptr inbounds %struct.MPContext, %struct.MPContext* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @mp_input_get_delay(i32 %20)
  %22 = call i32 @mp_set_timeout(%struct.MPContext* %17, i32 %21)
  ret void
}

declare dso_local i32* @mp_input_read_cmd(i32) #1

declare dso_local i32 @run_command(%struct.MPContext*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @mp_set_timeout(%struct.MPContext*, i32) #1

declare dso_local i32 @mp_input_get_delay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
